# FSST-3AHEL

./: CMakeLists.txt  README.md  main.c  notes.c  students.txt
inlcude/: functions.h
src/: readFile.c
